--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <lombok.version>1.18.20</lombok.version>
-        <postgres.jdbc.version>42.2.20</postgres.jdbc.version>
-        <connection.pool.dbcp.version>2.8.0</connection.pool.dbcp.version>
+        <postgres.jdbc.driver.version>42.2.20</postgres.jdbc.driver.version>
     </properties>
 
     <dependencies>
@@ -28,13 +27,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>${postgres.jdbc.version}</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-dbcp2</artifactId>
-            <version>${connection.pool.dbcp.version}</version>
+            <version>${postgres.jdbc.driver.version}</version>
         </dependency>
     </dependencies>
 </project>
