--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <maven.compiler.target>11</maven.compiler.target>
         <lombok.version>1.18.20</lombok.version>
         <postgres.jdbc.driver.version>42.2.20</postgres.jdbc.driver.version>
+        <junit.jupiter.api.version>5.7.1</junit.jupiter.api.version>
+        <junit.version>4.13.2</junit.version>
     </properties>
 
     <dependencies>
@@ -28,6 +30,18 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgres.jdbc.driver.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.api.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
