--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
         <postgres.jdbc.driver.version>42.2.20</postgres.jdbc.driver.version>
         <junit.jupiter.api.version>5.7.1</junit.jupiter.api.version>
         <junit.version>4.13.2</junit.version>
+        <apache.tomee.version>8.0-5</apache.tomee.version>
+        <jstl.version>1.2</jstl.version>
+        <taglibs.version>1.2.5</taglibs.version>
     </properties>
 
     <dependencies>
@@ -47,8 +50,20 @@
         <dependency>
             <groupId>org.apache.tomee</groupId>
             <artifactId>javaee-api</artifactId>
-            <version>8.0-5</version>
+            <version>${apache.tomee.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl-api -->
+        <dependency>
+            <groupId>javax.servlet.jsp.jstl</groupId>
+            <artifactId>jstl-api</artifactId>
+            <version>${jstl.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-impl -->
+        <dependency>
+            <groupId>org.apache.taglibs</groupId>
+            <artifactId>taglibs-standard-impl</artifactId>
+            <version>${taglibs.version}</version>
         </dependency>
 
     </dependencies>
